Add ability to select multiple options in form.select and form.select2 helpers
Closes #905

--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -104,7 +104,8 @@
         {
           "id"    : "select",
           "label" : "Select",
-          "src"   : tab_select
+          "src"   : tab_select,
+          'active': true
         },
         {
           "id"    : "select2",
