--- a/views/pulsar/v2/helpers/elem.html.twig
+++ b/views/pulsar/v2/helpers/elem.html.twig
@@ -260,7 +260,7 @@ value       | string | Specifies the value of the input
                     {% if option is iterable %}
                         {% for item in option %}
                             <option {{ util.value(item.value) }}
-                                {%- if mainOptions.selected is defined and item.value == mainOptions.selected %} selected{% endif -%}
+                                {%- if mainOptions.selected is defined and item.value in mainOptions.selected %} selected{% endif -%}
                                 {%- if item.disabled is defined and item.disabled == true %} disabled="disabled"{% endif -%}>
                                 {{- item.label -}}
                             </option>
@@ -276,7 +276,7 @@ value       | string | Specifies the value of the input
             {# non-optgroup nested syntax #}
             {% else %}
                 <option {{ util.value(label.value) }}
-                    {%- if mainOptions.selected is defined and label.value == mainOptions.selected %} selected{% endif -%}
+                    {%- if mainOptions.selected is defined and label.value in mainOptions.selected %} selected{% endif -%}
                     {%- if label.disabled is defined and label.disabled == true %} disabled="disabled"{% endif -%}>
                     {{- label.label -}}
                 </option>
@@ -285,7 +285,7 @@ value       | string | Specifies the value of the input
         {# legacy un-nested syntax #}
         {% else %}
             <option {{ util.value(value) }}
-            {%- if mainOptions.selected is defined and value == mainOptions.selected %} selected{% endif -%}
+            {%- if mainOptions.selected is defined and value in mainOptions.selected %} selected{% endif -%}
             >
                 {{- label -}}
             </option>
