Remove debug code

--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -104,8 +104,7 @@
         {
           "id"    : "select",
           "label" : "Select",
-          "src"   : tab_select,
-          'active': true
+          "src"   : tab_select
         },
         {
           "id"    : "select2",
