Fix missing right hand edge of datatable th focus style

--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -99,6 +99,7 @@ a.dt-button {
         &.sorting_desc:focus {
             outline: 3px solid color(border, focus);
             outline-offset: -3px;
+            z-index: 1;
         }
 
         &.sorting::after,
