--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -625,6 +625,7 @@ fieldset {
 .form-choice {
     > .controls {
         margin-top: 11px; // magic number to align with main label
+        overflow: hidden;
 
         > .control__label {
             clear: left;
