Make sure settings section uses 100% width in responsive mode
Closes #917

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -108,6 +108,8 @@
  */
 
 .settings-section--primary {
+    width: 100%;
+    
     @include respond-min-max($screen-smaller, $screen-medium) {
         float: left;
         min-width: 200px;
