Stop tables extending beyond tab__content when enlarged
See https://github.com/jadu/pulsar/pull/925#discussion_r234206459

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -365,11 +365,10 @@
 .tab__container.has-settings .tab__content {
     @include respond-min($screen-medium) {
         margin-bottom: $line-height-small;
-        -webkit-flex: 1 1 auto;
-        -moz-flex: 1 1 auto;
+        
+        // stop tables extending past the container when enlarged (IE10)
+        // https://github.com/jadu/pulsar/pull/925#discussion_r234206459
         -ms-flex: 1 1 auto;
-        -o-flex: 1 1 auto;
-        flex: 1 1 auto;
 
         .ie9 & {
             padding-left: $padding-small-horizontal * 2;
