Hide pagination numbers on mobile

--- a/stylesheets/_component.pagination.scss
+++ b/stylesheets/_component.pagination.scss
@@ -15,6 +15,14 @@
   li {
     @include inline-block;
     list-style-type: none;
+
+    &:not(:first-child):not(:last-child) {
+        display: none;
+
+        @include respond-min($screen-tablet) {
+            display: inline-block;
+        }
+    }
   }
 
   a,
