--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -333,6 +333,14 @@ th.sorting_disabled:hover {
         width: auto;
     }
 
+    span {
+        display: none;
+
+        @include respond-min($screen-tablet) {
+            display: inline;
+        }
+    }
+
     .paginate_button {
         @include inline-block;
         color: color(text);
