--- a/stylesheets/_component.slider.scss
+++ b/stylesheets/_component.slider.scss
@@ -2,7 +2,7 @@
     padding: $padding-base * 2;
 
     @include respond-min($screen-tablet) {
-        margin: 5em auto 0;
+        margin: 5em auto;
         padding: 0;
         width: 600px;
     }
