remove ios appearence on main search

--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -19,6 +19,7 @@
 }
 
 input.main-search__field {
+    appearance: none;
     background-color: transparent;
     border: 0;
     box-sizing: border-box;
