tighten toolbar spacing on mobile

--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -4,7 +4,7 @@
     display: block;
     float: left;
     margin-bottom: 18px;
-    padding: 12px 20px;
+    padding: 12px 20px 0;
     width: 100%;
 
     @include respond-min($screen-desktop) {
