prevented filter bar popover form action buttons being 100% width / block level on mobile

--- a/stylesheets/_component.filterbar.scss
+++ b/stylesheets/_component.filterbar.scss
@@ -100,7 +100,7 @@
                 top: 10px;
             }
 
-            .btn {
+            > .btn {
                 display: block;
                 margin-top: $gutter-width / 2;
                 width: 100%;
