--- a/stylesheets/_component.toggle-switch.scss
+++ b/stylesheets/_component.toggle-switch.scss
@@ -85,9 +85,9 @@
         color: color(white);
         content: '\F00C \F00D';
         font-family: 'FontAwesome';
-        font-size: 16px;
+        font-size: $font-size-base;
         left: 10px;
-        letter-spacing: 14.4px;
+        letter-spacing: 14.4px; // Magic number - for correct alignment
         line-height: 2;
         position: absolute;
         top: 0;
