Make sure colour pickers don’t exceed sidebar widths in IE9

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -471,8 +471,8 @@
             width: 100%;
         }
 
-        &.colorpicker .form__control {
-            width: calc(100% - 48px) !important;
+        .ie9 &.colorpicker .form__control {
+            width: calc(100% - 48px);
         }
 
         .help-block {
