--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -520,12 +520,12 @@ td.table__form .rules + .form__group:last-of-type {
     }
 
     .rule-block--and {
-        background-color: lighten(#e8b750, 30);
-        border-color: #e8b750;
+        background-color: lighten(#f7d183, 30);
+        border-color: #f7d183;
         margin-top: 0;
 
         .rule-block__header {
-            background-color: #e8b750;
+            background-color: #f7d183;
             color: color(black);
         }
     }
