--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -520,8 +520,8 @@ td.table__form .rules + .form__group:last-of-type {
     }
 
     .rule-block--and {
-        background-color: lighten(#f7d183, 30);
-        border-color: #f7d183;
+        background-color: lighten(#e8b750, 30);
+        border-color: #e8b750;
         margin-top: 0;
 
         .rule-block__header {
@@ -580,7 +580,6 @@ td.table__form .rules + .form__group:last-of-type {
         .rule-block__header {
             background-color: color(gray, dark);
             border-top-left-radius: 14px;
-            border-top-right-radius: 14px;
             color: color(white);
 
             @include respond-min($screen-small) {
