toggle switch styles now meet AA contrast

--- a/stylesheets/_component.toggle-switch.scss
+++ b/stylesheets/_component.toggle-switch.scss
@@ -49,7 +49,7 @@
 
 .toggle-switch-label {
     background-clip: padding-box;
-    background-color: color(grey, light);
+    background-color: color(grey);
     border-color: transparent;
     border-radius: 1.5em;
     color: color(white);
