--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -74,7 +74,7 @@
 
 .select2-dropdown {
     background-color: white;
-    border: 1px solid #aaa;
+    border: 1px solid $input-border;
     border-radius: 4px;
     box-sizing: border-box;
     display: block;
@@ -170,7 +170,7 @@
 
 .select2-container--default .select2-selection--single {
     background-color: #fff;
-    border: 1px solid #aaa;
+    border: 1px solid $input-border;
     border-radius: 4px;
 }
 
@@ -231,7 +231,7 @@
 
 .select2-container--default .select2-selection--multiple {
     background-color: white;
-    border: 1px solid #aaa;
+    border: 1px solid $input-border;
     border-radius: 4px;
     cursor: text;
 }
@@ -360,7 +360,7 @@
 }
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
-    border: 1px solid #aaa;
+    border: 1px solid $input-border;
 }
 
 .select2-container--default .select2-search--inline .select2-search__field {
@@ -441,7 +441,7 @@
 
 .select2-container--classic .select2-selection--single {
     background-color: #f7f7f7;
-    border: 1px solid #aaa;
+    border: 1px solid $input-border;
     border-radius: 4px;
     outline: 0;
     background-image: -webkit-linear-gradient(top, white 50%, #eee 100%);
@@ -477,7 +477,7 @@
 .select2-container--classic .select2-selection--single .select2-selection__arrow {
     background-color: #ddd;
     border: 0;
-    border-left: 1px solid #aaa;
+    border-left: 1px solid $input-border;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     height: 26px;
@@ -511,7 +511,7 @@
 
 .select2-container--classic[dir="rtl"] .select2-selection--single .select2-selection__arrow {
     border: 0;
-    border-right: 1px solid #aaa;
+    border-right: 1px solid $input-border;
     border-radius: 0;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
@@ -557,7 +557,7 @@
 
 .select2-container--classic .select2-selection--multiple {
     background-color: white;
-    border: 1px solid #aaa;
+    border: 1px solid $input-border;
     border-radius: 4px;
     cursor: text;
     outline: 0;
@@ -582,7 +582,7 @@
 
 .select2-container--classic .select2-selection--multiple .select2-selection__choice {
     background-color: #e4e4e4;
-    border: 1px solid #aaa;
+    border: 1px solid $input-border;
     border-radius: 4px;
     cursor: default;
     float: left;
@@ -634,7 +634,7 @@
 }
 
 .select2-container--classic .select2-search--dropdown .select2-search__field {
-    border: 1px solid #aaa;
+    border: 1px solid $input-border;
     outline: 0;
 }
 
