changed input border colour to meet 2.1 AA contrast

--- a/stylesheets/_palette.base.scss
+++ b/stylesheets/_palette.base.scss
@@ -172,7 +172,7 @@ $palette-alias: (
         disabled:  map-get(map-get($palette-monochromes, gray), lighter)
     ),
     border: (
-        base:      map-get(map-get($palette-monochromes, gray), lighter),
+        base:      map-get(map-get($palette-monochromes, gray), base),
         focus:     #ffbf47
     ),
     background: (
